# GnomoVerde

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
backend/app/: main.py
tests/: test_health.py
